--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -98,7 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "# here you need to specify the parameters with suffix _run.yaml (not param_run_in.yaml)\n",
+    "# here you need to specify the parameters with suffix _run.yaml in your model's output folder (not param_run_in.yaml)\n",
     "param_path = 'config/param_run.yaml'\n",
     "model_path = 'network/model_0.pt'\n",
     "frame_path = 'experimental_data_workflow/frames.tif'\n",
@@ -511,8 +511,8 @@
     "sigma_z_high_threshold = 80\n",
     "\n",
     "em_sub = emitter[\n",
-    "    (emitter.xyz_sig_nm[:, 0] <= sigma_x_high_threshold) \n",
-    "    * (emitter.xyz_sig_nm[:, 1] <= sigma_x_high_threshold) \n",
+    "    (emitter.xyz_sig_nm[:, 0] <= sigma_x_high_threshold)\n",
+    "    * (emitter.xyz_sig_nm[:, 1] <= sigma_x_high_threshold)\n",
     "    * (emitter.xyz_sig_nm[:, 2] <= sigma_z_high_threshold)\n",
     "    ]\n",
     "# em_sub = emitter.filter_by_sigma(0.67)  # alternatively\n",
