Precisify forward backward

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -349,8 +349,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the mean brightness, we see that there is a large missmatch. The reason is that we simulate the photons that are emitted by the fluorophores, while the tiff file shows the photons that are recorded by the camera (after amplificiation). To enable direct comparison we convert the real data frames into photon numbers.\n",
-    "Be aware that camera.forward()  and camera.forward() are not each others inverse. forward() performs noise sampling, while backward() simply rescales by the em_gain"
+    "Looking at the mean brightness, we see that there is a large missmatch.\n",
+    "The reason is that we simulate the photons that are emitted by the fluorophores, while the tiff file shows the photons that are recorded by the camera (after amplificiation).\n",
+    "To enable direct comparison we convert the real data frames into photon numbers.\n",
+    "Be aware that camera.forward() and camera.backward() are not each others exact inverse. forward()\n",
+    "performs noise sampling, while backward() simply converts camera units back to expected photon\n",
+    "numbers by the respective statistical means."
    ]
   },
   {
