Console script entrypoint for training

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -476,7 +476,7 @@
     "\n",
     "    conda activate decode_env\n",
     "    cd [directory where this notebook is]\n",
-    "    python -m decode.neuralfitter.train.live_engine -p notebook_example.yaml  # change path if you modified it\n",
+    "    decode.train -p notebook_example.yaml  # change path if you modified it\n",
     "\n",
     "You can end training at any point by killing the associated process if you think that the model has converged. The current network is stored after every epoch.\n",
     "You can also continue training (for example in case of crash) by setting the param.InOut.checkpoint_init parameter to the path of the ckpt.pt of the training run.\n",
