Add autofill explicitely

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -185,7 +185,7 @@
    },
    "outputs": [],
    "source": [
-    "param = decode.utils.param_io.load_params(param_path)\n",
+    "param = decode.utils.param_io.load_params(param_path, autofill=False)\n",
     "model = decode.neuralfitter.models.SigmaMUNet.parse(param)\n",
     "model = decode.utils.model_io.LoadSaveModel(model,\n",
     "                                            input_file=model_path,\n",
