--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -183,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "param = decode.utils.param_io.load_params('param_friendly.yaml')  # change path if you load custom file\n",
+    "param = decode.utils.param_io.load_params('param_friendly.yaml', autofill=True)  # change path if you load custom file\n",
     "\n",
     "param.Hardware.device = device\n",
     "param.Hardware.device_ix = device_ix\n",
